src/_includes/index.css
/* ... */
html {
	font-size: var(--app-font-size);
}

body {
	width: 100%;
	margin: 0;
	transition:
		color var(--app-transition),
		background-color var(--app-transition);

	font-family: var(--app-font-family), sans-serif;
	font-size: inherit;

	text-rendering: optimizeLegibility;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
}

main {
	display: block;
}

body > header,
body > main,
body > footer {
	padding-block: var(--app-block-spacing-vertical);
}

section {
	margin-bottom: var(--app-block-spacing-vertical);
}

.container,
.container-fluid {
	width: 100%;
	margin-right: auto;
	margin-left: auto;
	padding-right: var(--app-spacing);
	padding-left: var(--app-spacing);
}

@media (min-width: 576px) {
	.container {
		max-width: 510px;
		padding-right: 0;
		padding-left: 0;
	}
}

@media (min-width: 768px) {
	.container {
		max-width: 700px;
	}
}

@media (min-width: 1024px) {
	.container {
		max-width: 950px;
	}
}

@media (min-width: 1280px) {
	.container {
		max-width: 1200px;
	}
}

@media (min-width: 1536px) {
	.container {
		max-width: 1450px;
	}
}

address,
blockquote,
dl,
ol,
p,
pre,
table,
ul {
	margin-top: 0;
	margin-bottom: var(--app-typography-spacing-vertical);
	color: inherit;
	font-style: normal;
	font-weight: var(--app-font-weight);
}

h1 {
	--app-font-weight: 900;
}

h2,
h3,
h4,
h5,
h6 {
	--app-font-weight: 700;
}

h1,
h2,
h3,
h4,
h5,
h6 {
	margin-top: 0;
	margin-bottom: var(--app-typography-spacing-vertical);
	font-weight: var(--app-font-weight);
	font-size: var(--app-font-size);
	line-height: var(--app-line-height);
	font-family: var(--app-font-family), sans-serif;
}

:where(article, address, blockquote, dl, figure, form, ol, p, pre, table, ul)
	~ :is(h1, h2, h3, h4, h5, h6) {
	margin-top: var(--app-typography-spacing-top);
}

h1 {
	--app-font-size: 2rem;
	--app-line-height: 1.125;
	--app-typography-spacing-top: 3rem;
}

h2 {
	--app-font-size: 1.75rem;
	--app-line-height: 1.15;
	--app-typography-spacing-top: 2.625rem;
}

h3 {
	--app-font-size: 1.5rem;
	--app-line-height: 1.175;
	--app-typography-spacing-top: 2.25rem;
}

h4 {
	--app-font-size: 1.25rem;
	--app-line-height: 1.2;
	--app-typography-spacing-top: 1.874rem;
}

h5 {
	--app-font-size: 1.125rem;
	--app-line-height: 1.225;
	--app-typography-spacing-top: 1.6875rem;
}

h6 {
	--app-font-size: 1rem;
	--app-line-height: 1.25;
	--app-typography-spacing-top: 1.5rem;
}

p {
	margin-bottom: var(--app-typography-spacing-vertical);
}

a {
	color: var(--app-color);
}

blockquote {
	background: var(--app-background-color-contrast);
	display: block;
	margin: var(--app-typography-spacing-vertical) 0;
	padding: var(--app-spacing);
	border-right: none;
	border-left: 0.25rem solid var(--app-accent-color);
	border-inline-start: 0.25rem solid var(--app-accent-color);
	border-inline-end: none;
}

blockquote p {
	line-height: var(--app-line-height);
	font-family: "Times New Roman", sans-serif;
	margin: 0;
}

hgroup {
	margin-bottom: var(--app-typography-spacing-vertical);
}

hgroup > * {
	margin-top: 0;
	margin-bottom: 0;
}

hgroup > *:not(:first-child):last-child {
	--app-font-weight: unset;
}

:where(ol, ul) li {
	margin-bottom: calc(var(--app-typography-spacing-vertical) * 0.25);
}

:where(dl, ol, ul) :where(dl, ol, ul) {
	margin: calc(var(--app-typography-spacing-vertical) * 0.25) 0 0;
}

ul li {
	list-style: disc;
}

article {
	margin-bottom: var(--app-block-spacing-vertical);
	padding: var(--app-block-spacing-vertical) var(--app-block-spacing-horizontal);
	border-radius: var(--app-border-radius);
	background: var(--app-background-color);
}

article > header,
article > footer {
	margin-right: calc(var(--app-block-spacing-horizontal) * -1);
	margin-left: calc(var(--app-block-spacing-horizontal) * -1);
	padding: calc(var(--app-block-spacing-vertical) * 0.66) var(--app-block-spacing-horizontal);
}

article > header {
	margin-top: calc(var(--app-block-spacing-vertical) * -1);
	margin-bottom: var(--app-block-spacing-vertical);
	border-top-right-radius: var(--app-border-radius);
	border-top-left-radius: var(--app-border-radius);
}

article > footer {
	margin-top: var(--app-block-spacing-vertical);
	margin-bottom: calc(var(--app-block-spacing-vertical) * -1);
	border-bottom-right-radius: var(--app-border-radius);
	border-bottom-left-radius: var(--app-border-radius);
}

.container--grid {
	grid-column-gap: var(--app-grid-column-gap);
	grid-row-gap: var(--app-grid-row-gap);
	display: grid;
	grid-template-columns: 1fr;
}

.container--grid > * {
	min-width: 0;
}

@media (min-width: 768px) {
	.container--grid {
		grid-template-columns: repeat(auto-fit, minmax(0%, 1fr));
	}
}

hr {
	height: 0;
	margin: var(--app-typography-spacing-vertical) 0;
	border: 0;
	border-top: 1px solid var(--app-accent-color);
	color: inherit;
}

.accent {
	background: var(--app-accent-color);
	height: var(--app-block-spacing-vertical);
}

pre,
code,
kbd,
samp {
	font-family: "JetBrains Mono", system-ui, monospace;
	font-size: 0.875em;
}

pre code {
	font-size: inherit;
	font-family: inherit;
}

pre {
	-ms-overflow-style: scrollbar;
	overflow: auto;
}

pre,
code,
kbd {
	border-radius: var(--app-border-radius);
	background: var(--app-code-background-color);
	color: var(--app-code-color);
	font-weight: var(--app-font-weight);
	line-height: initial;
}

code,
kbd {
	display: inline-block;
	padding: 0.375rem;
}

pre {
	display: block;
	margin-bottom: var(--app-spacing);
	overflow-x: auto;
}

pre > code {
	display: block;
	padding: var(--app-spacing);
	background: none;
	line-height: var(--app-line-height);
}

kbd {
	background-color: var(--app-code-kbd-background-color);
	color: var(--app-code-kbd-color);
	vertical-align: baseline;
}

.post a:not(footer > a) {
	color: var(--app-accent-color);
}
/* ... */

